[package]
name = "mirage-city-server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = "0.5.15"
base64 = "0.13.0"
redis-async = "0.13.0"
serde = { version="1.0", features=["derive"]}
tokio = { version = "1.20.1", features = ["full"] }
tower-http = { version = "0.3.4", features=["cors"]}
